tag tooltip z-index fix

--- a/src/webtagging.css
+++ b/src/webtagging.css
@@ -517,4 +517,5 @@
     padding-bottom: 8px;
     padding-left: 6px;
     padding-right: 30px;
+    z-index: 1000;
 }
